--- a/lib/core/cardano-wallet-core.cabal
+++ b/lib/core/cardano-wallet-core.cabal
@@ -179,6 +179,7 @@ library
       Cardano.Wallet.DB.Sqlite.Types
       Cardano.Wallet.Logging
       Cardano.Wallet.Network
+      Cardano.Wallet.Network.Client
       Cardano.Wallet.Network.Ports
       Cardano.Wallet.Orphans
       Cardano.Wallet.TokenMetadata
@@ -239,7 +240,6 @@ library
       Network.Ntp
       Network.Wai.Middleware.ServerError
       Network.Wai.Middleware.Logging
-      Ouroboros.Network.Client.Wallet
   other-modules:
       Paths_cardano_wallet_core
 
