--- a/lib/shelley/cardano-wallet.cabal
+++ b/lib/shelley/cardano-wallet.cabal
@@ -47,6 +47,7 @@ library
     , cardano-ledger-core
     , cardano-ledger-shelley-ma
     , cardano-ledger-alonzo
+    , cardano-protocol-tpraos
     , cardano-slotting
     , cardano-wallet-cli
     , cardano-wallet-core
