Move `cacheListPoolsOption` into `cardano-cli`
Add unit tests for TTL parsing

--- a/lib/core/cardano-wallet-core.cabal
+++ b/lib/core/cardano-wallet-core.cabal
@@ -213,6 +213,7 @@ library
       Cardano.Wallet.Util
       Cardano.Wallet.Version
       Cardano.Wallet.Version.TH
+      Control.Cache
       Control.Concurrent.Concierge
       Crypto.Hash.Utils
       Data.Function.Utils
